fix: temp spacings

--- a/packages/audiodocs/src/pages/styles.module.css
+++ b/packages/audiodocs/src/pages/styles.module.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 7.5rem;
+  gap: 3rem;
   /* position: relative; */
 }
 
